...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".UserProfile">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_anchor="@+id/assignmentsContainer"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">


        <Button
            android:id="@+id/changeMyLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/orangePrimary"
            android:text="@string/action_Language"
            android:textColor="#fff" />

        <Button
            android:id="@+id/toAnalysis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@color/orangePrimary"
            android:onClick="toAnalysis"
            android:text="@string/user_analysis"
...
            android:textColor="#fff" />


    </LinearLayout>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/enterInstruments"
        android:layout_width="237dp"
        android:layout_height="46dp"
        android:hint="@string/profile_enter_instruments_here"
        app:layout_constraintBottom_toTopOf="@+id/InstrumentList"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_email"
        app:layout_constraintVertical_bias="1.0" />

    <Button
...
