...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/add"
                android:textColor="#fff" />

        </LinearLayout>



...
