...
    <string name="user_profile_chat">Chat</string>
    <string name="form__delete_button">Delete</string>
    <string name="assignment__overview__user_label">Assignee</string>
    <string name="title_activity_user_search">Search for Users</string>
    <string name="title_activity_add_users">Add Users</string>
    <string name="title_activity_chat_landing">Chat with others</string>
    <string name="title_activity_user_main_profile">User Profile</string>
    <string name="title_activity_login">Log In</string>
    <string name="text_content">text</string>
    <string name="action_Language">Language</string>
    <string name="assignment__form__view_todos">To Do</string>
    <string name="form__view_button">View</string>
    <string name="title_activity_assignment_view">View Assignment</string>
    <string name="title_activity_to_do_item_view">View To Do Item</string>
    <string name="completed">Completed</string>

...
    <string name="user_signup_student">Student</string>
    <string name="user_signup_select_a_role_to_continue">Select A Role To Continue</string>
    <string name="user_signup_already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="profile_add_users">Add Users</string>
    <string name="profile_edit_data">Edit Data</string>
    <string name="profile_enter_instruments_here">Enter instruments here</string>
    <string name="profile_add">add</string>
    <string name="edit_enter_new_name">Enter New Name</string>
    <string name="edit_enter_new_email">Enter New Email</string>
    <string name="edit_name_confirm">Confirm</string>
    <string name="edit_confirm">Confirm</string>
    <string name="edit_reset_password">Reset Password</string>
    <string name="chat_type_a_message">Type a message…</string>
...
    <string name="edit_assignment">Edit Assignment</string>
    <string name="assignment__student_done">Done?</string>
    <string name="assignment__teacher_marked">Mark?</string>
    <string name="Due_in_One_Week">Due in One or Less Weeks</string>
    <string name="Due_in_Two_Week">Due in Two Weeks</string>
    <string name="Due_in_Three_Week">Due in Three or More Weeks</string>
    <string name="user_analysis">Analysis</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_password">Enter your email to receive password reset link</string>
    <string name="error_link">Error! Reset link not sent</string>
    <string name="link_sent">Resent link sent to email</string>
    <string name="no_instrument">No instrument entered</string>
    <string name="already_added"> is already added</string>
...
